--- a/1-jeden/index.html
+++ b/1-jeden/index.html
@@ -10,6 +10,8 @@
 	<script src="Scenes/MainMenu.js"></script>
 </head>
 <body>
+
+<h1>hi there</h1>
 <script type="text/javascript">
 (function () {
 	var game = new Phaser.Game(640, 960, Phaser.CANVAS, 'game'); // Phaser engine initialization
