--- a/1-jeden/index.html
+++ b/1-jeden/index.html
@@ -12,6 +12,8 @@
 <body>
 
 <h1>hi there</h1>
+
+testing after adding the key
 <script type="text/javascript">
 (function () {
 	var game = new Phaser.Game(640, 960, Phaser.CANVAS, 'game'); // Phaser engine initialization
